<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>io.github.thunkware</groupId>
    <artifactId>auto-valhalla</artifactId>
    <version>0.1.1-SNAPSHOT</version>
  </parent>

  <artifactId>auto-valhalla-processor</artifactId>
  <name>auto-valhalla annotation processor</name>

  <description>
    Annotation processor (javac's -processor) that selects the top-level
    @AutoValhalla classes in a source tree and emits generated value class/value
    record sources plus a selection manifest. The auto-valhalla-maven-plugin
    drives it with javac -proc:only and compiles the generated sources with
    --enable-preview.
  </description>

  <url>https://github.com/thunkware/auto-valhalla.git</url>
  <organization>
      <name>thunkware</name>
  </organization>

  <licenses>
    <license>
      <name>Apache 2</name>
      <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>manual</distribution>
      <comments>A business-friendly OSS license</comments>
    </license>
  </licenses>

  <scm>
    <connection>scm:git:git://github.com/thunkware/auto-valhalla.git</connection>
    <developerConnection>scm:git:https://github.com/thunkware/auto-valhalla.git</developerConnection>
    <url>https://github.com/thunkware/auto-valhalla</url>
    <tag>HEAD</tag>
  </scm>

  <developers>
    <developer>
      <name>maxxedev</name>
    </developer>
  </developers>

  <properties>
    <maven.compiler.release>8</maven.compiler.release>
    <spotless-maven-plugin.version>2.30.0</spotless-maven-plugin.version>
    <maven.compiler.enablePreview>false</maven.compiler.enablePreview>
  </properties>

  <dependencies>
    <!-- tools.jar from JDK8 -->
    <dependency>
      <groupId>com.perfma.wrapped</groupId>
      <artifactId>com.sun.tools</artifactId>
      <version>1.8.0_jdk8u275-b01_linux_x64</version>
      <scope>provided</scope>
    </dependency>

    <!-- Only used by the tests, which compile fixture sources carrying the
         annotation through the same javac that runs the processor. -->
    <dependency>
      <groupId>io.github.thunkware</groupId>
      <artifactId>auto-valhalla-api</artifactId>
      <version>${project.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>5.10.2</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
        <configuration>
          <proc>none</proc>
        </configuration>
      </plugin>
      <!-- Version and formatter config come from the root pom, which skips it
           everywhere else. -->
      <plugin>
        <groupId>com.diffplug.spotless</groupId>
        <artifactId>spotless-maven-plugin</artifactId>
        <configuration>
          <skip>false</skip>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
